@@ -1,8 +1,8 @@
 package org.osm2world.core.target.obj;
 
-import org.osm2world.core.target.Renderable;
+import org.osm2world.core.target.common.RenderableToPrimitiveTarget;
 
-public interface RenderableToObj extends Renderable {
+public interface RenderableToObj extends RenderableToPrimitiveTarget {
 
 	public void renderTo(ObjTarget target);
 
