@@ -6,6 +6,7 @@
  * allow replacing POVRay textures in osm2world_definitions.inc
  * make elevation calculator configurable, default to ZeroElevationCalculator
  * bugfix in ForceEC. (duplicate points with ele) solves missing walls in POVRay
+ * OBJ export can be split into multiple files
  * better minimum and maximum depths for orthographic view
  * configurable PNG output background color
  * support for entrance=*
